更新startJar方法。